# eazydatafix

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README_VISION.md  ROADMAP.md  VISION.md  __easydatafix_temp__.csv  employees.csv  pyproject.toml  test_analysis_ready.py
.emergent/: emergent.yml
.github/workflows/: ci.yml  python.yml
architecture/: 01_Vision.md  02_User_Personas.md  03_Architecture.md  04_Public_API.md  05_Data_Quality_Model.md  repository_tree.txt
data/: aadhaar_test.csv  case_consistency_test.csv  consistency_test.csv  credit_card_test.csv  datatype_test.csv  date_test.csv  duplicate_text_test.csv  email_test.csv  employees.csv  full_validation_test.csv  future_date_test.csv  gstin_test.csv  ip_address_test.csv  numeric_range_test.csv  pan_test.csv  phone_test.csv  pincode_test.csv  stale_data_test.csv  timeliness_test.csv  url_test.csv  validity_test.csv  whitespace_consistency_test.csv  whitespace_test.csv
docs/: architecture.md
easydatafix/: __init__.py  autofix.py  console_report.py  exceptions.py  report.py
easydatafix.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
easydatafix/assessment/: engine.py  profiler.py
easydatafix/assessment/checks/: completeness.py  uniqueness.py
easydatafix/assessment/checks/accuracy/: engine.py  numeric_range_check.py
easydatafix/assessment/checks/consistency/: case_consistency_check.py  duplicate_text_check.py  engine.py  whitespace_consistency_check.py
easydatafix/assessment/checks/timeliness/: engine.py  future_date_check.py  stale_data_check.py
easydatafix/assessment/checks/validity/: aadhaar_check.py  credit_card_check.py  date_check.py  email_check.py  engine.py  gstin_check.py  ip_address_check.py  pan_check.py  phone_check.py  pincode_check.py  url_check.py
easydatafix/contracts/: check.py  fix_step.py  fix_strategy.py
easydatafix/core/: dataset_loader.py  score_calculator.py  type_mapper.py
easydatafix/datasources/: __init__.py  csv.py  dataframe.py  excel.py  json.py  loader.py  parquet.py  registry.py
easydatafix/diagnosis/: engine.py
easydatafix/enums/: data_type.py
easydatafix/fix/: column_normalizer.py  datatype_converter.py  duplicate_remover.py  empty_column_remover.py  empty_row_remover.py  engine.py  whitespace_trimmer.py
easydatafix/fix/strategies/: base.py  drop.py  factory.py  mean.py  median.py  mode.py  register.py  smart.py
easydatafix/models/: assessment_report.py  comparison_report.py  dataset_info.py  dataset_profile.py  diagnosis_issue.py  diagnosis_report.py  fix_config.py  fix_result.py  quality_dimensions.py  quality_score.py  recommendation.py
easydatafix/plugins/: __init__.py  base.py  defaults.py  registry.py
easydatafix/prepare/: engine.py
easydatafix/recommendations/: engine.py
easydatafix/rendering/: console.py
easydatafix/reporting/: csv_report.py  excel_report.py  html_report.py  json_report.py  markdown_report.py  pdf_report.py
easydatafix/reporting/templates/: report.html
easydatafix/validation/: engine.py
eazydatafix/: __init__.py  console_report.py
eazydatafix/assessment/: __init__.py  ai_readiness.py  engine.py  profiler.py
eazydatafix/assessment/checks/: _runner.py  completeness.py  uniqueness.py
eazydatafix/assessment/checks/accuracy/: engine.py  numeric_range_check.py
eazydatafix/assessment/checks/consistency/: case_consistency_check.py  duplicate_text_check.py  engine.py  whitespace_consistency_check.py
eazydatafix/assessment/checks/timeliness/: engine.py  future_date_check.py  stale_data_check.py
eazydatafix/assessment/checks/validity/: aadhaar_check.py  credit_card_check.py  date_check.py  email_check.py  engine.py  gstin_check.py  ip_address_check.py  pan_check.py  phone_check.py  pincode_check.py  url_check.py
eazydatafix/contracts/: __init__.py  fix_step.py
eazydatafix/core/: column_profiler.py  dataset_loader.py  score_calculator.py  type_mapper.py
eazydatafix/datasources/: __init__.py  base.py  csv.py  dataframe.py  excel.py  json.py  loader.py  parquet.py  registry.py
eazydatafix/diagnosis/: __init__.py  engine.py
eazydatafix/enums/: __init__.py
eazydatafix/fix/: __init__.py  column_normalizer.py  datatype_converter.py  duplicate_remover.py  empty_column_remover.py  empty_row_remover.py  engine.py  whitespace_trimmer.py
eazydatafix/fix/strategies/: __init__.py  drop.py  factory.py  mean.py  median.py  mode.py  register.py  smart.py
eazydatafix/models/: ai_readiness_report.py  assessment_report.py  comparison_report.py  diagnosis_report.py  fix_config.py  fix_result.py  ready_result.py  validation_result.py
eazydatafix/plugins/: defaults.py
eazydatafix/prepare/: __init__.py  engine.py
eazydatafix/recommendations/: __init__.py  engine.py
eazydatafix/rendering/: __init__.py  console.py
eazydatafix/reporting/: __init__.py  csv_report.py  excel_report.py  html_report.py  json_report.py  markdown_report.py  pdf_report.py
eazydatafix/validation/: __init__.py  engine.py
tests/: conftest.py  test_ai_readiness.py  test_assessment_engine.py  test_check_runner.py  test_dataset_profiler.py  test_dataset_profiler_formats.py  test_datasources.py  test_reports.py  test_score_calculator.py  test_validation_engine.py
tests/data/: report.csv  validation.csv
