[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easydatafix"
version = "0.1.3"
description = "A modern Python library for data quality assessment, validation, and automated data cleaning."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Suneel Kumar Kola" }
]

license = "MIT"

keywords = [
    "data-quality",
    "data-cleaning",
    "data-validation",
    "data-profiling",
    "pandas",
    "etl",
    "data-analysis",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.5",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=14.0.0"]

[project.urls]
Homepage = "https://github.com/suneelprojects/easydatafix"
Repository = "https://github.com/suneelprojects/easydatafix"
Documentation = "https://github.com/suneelprojects/easydatafix"
Issues = "https://github.com/suneelprojects/easydatafix/issues"

[tool.setuptools.packages.find]
include = ["easydatafix*"]

[tool.setuptools.package-data]
easydatafix = [
    "reporting/templates/*.html",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
